force-app/main/default/objects/InsurancePolicy/fields/braseg_cd_agencia_debito__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_agencia_debito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código de Agencia de Débito</label>
    <length>20</length>
    <type>Text</type>
</CustomField>