force-app/main/default/objects/InsurancePolicy/fields/braseg_cd_agencia_produtora__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_agencia_produtora__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codigo Agencia Produtora</label>
    <length>20</length>
    <type>Text</type>
</CustomField>