force-app/main/default/objects/InsurancePolicy/fields/braseg_cd_banco_debito__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_banco_debito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código de Banco de Débito</label>
    <length>20</length>
    <type>Text</type>
</CustomField>