force-app/main/default/objects/InsurancePolicy/fields/braseg_cd_corretor_bvp__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_corretor_bvp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código BVP do Corretor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>