force-app/main/default/objects/InsurancePolicy/fields/braseg_cd_corretor_his__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_corretor_his__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Codigo Corretor HIS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>