force-app/main/default/objects/InsurancePolicy/fields/braseg_cd_cpd__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_cpd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código CPD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>