force-app/main/default/objects/InsurancePolicy/fields/braseg_cd_plano__c.field-meta.xml
<CustomField>
    <fullName>braseg_cd_plano__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código do Plano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>