force-app/main/default/objects/InsurancePolicy/fields/braseg_chapo__c.field-meta.xml
<CustomField>
    <fullName>braseg_chapo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chapo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>