force-app/main/default/objects/InsurancePolicy/fields/braseg_coordenador_responsavel__c.field-meta.xml
<CustomField>
    <fullName>braseg_coordenador_responsavel__c</fullName>
    <description>Coordenador Responsável</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Coordenador Responsável</inlineHelpText>
    <label>Coordenador Responsável</label>
    <length>40</length>
    <type>Text</type>
</CustomField>