force-app/main/default/objects/InsurancePolicy/fields/braseg_cpfcnpj_corretor__c.field-meta.xml
<CustomField>
    <fullName>braseg_cpfcnpj_corretor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CPF CNPJ Corretor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>