force-app/main/default/objects/InsurancePolicy/fields/braseg_ds_canal_producao__c.field-meta.xml
<CustomField>
    <fullName>braseg_ds_canal_producao__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Canal de Produção</label>
    <length>100</length>
    <type>Text</type>
</CustomField>