force-app/main/default/objects/InsurancePolicy/fields/braseg_ds_endosso__c.field-meta.xml
<CustomField>
    <fullName>braseg_ds_endosso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrição do Endosso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>