force-app/main/default/objects/InsurancePolicy/fields/braseg_dt_inscricao_proposta__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_inscricao_proposta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data de Venda da Proposta</label>
    <type>Date</type>
</CustomField>