force-app/main/default/objects/InsurancePolicy/fields/braseg_dt_pagamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_dt_pagamento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data de Pagamento</label>
    <type>Date</type>
</CustomField>