force-app/main/default/objects/InsurancePolicy/fields/braseg_fl_apolice_conjugada__c.field-meta.xml
<CustomField>
    <fullName>braseg_fl_apolice_conjugada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apólice Conjugada</label>
    <type>Checkbox</type>
</CustomField>