force-app/main/default/objects/InsurancePolicy/fields/braseg_gerente_assistente__c.field-meta.xml
<CustomField>
    <fullName>braseg_gerente_assistente__c</fullName>
    <description>Gerente Assistente</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Gerente Assistente</inlineHelpText>
    <label>Gerente Assistente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>