force-app/main/default/objects/InsurancePolicy/fields/braseg_gerente_banco__c.field-meta.xml
<CustomField>
    <fullName>braseg_gerente_banco__c</fullName>
    <description>Gerente Banco</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Gerente Banco</inlineHelpText>
    <label>Gerente Banco</label>
    <length>40</length>
    <type>Text</type>
</CustomField>