force-app/main/default/objects/InsurancePolicy/fields/braseg_gerente_relacionamento__c.field-meta.xml
<CustomField>
    <fullName>braseg_gerente_relacionamento__c</fullName>
    <description>Gerente de Relacionamento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Gerente de Relacionamento</inlineHelpText>
    <label>Gerente de Relacionamento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>