force-app/main/default/objects/InsurancePolicy/fields/braseg_grupo_economico__c.field-meta.xml
<CustomField>
    <fullName>braseg_grupo_economico__c</fullName>
    <description>Grupo Economico</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Grupo Economico</inlineHelpText>
    <label>Grupo Economico</label>
    <length>40</length>
    <type>Text</type>
</CustomField>