force-app/main/default/objects/InsurancePolicy/fields/braseg_matr_empresa__c.field-meta.xml
<CustomField>
    <fullName>braseg_matr_empresa__c</fullName>
    <formula>Nome_empresa__r.braseg_matr_prevarcor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matricula Empresa</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>