force-app/main/default/objects/InsurancePolicy/fields/braseg_nm_estipulante__c.field-meta.xml
<CustomField>
    <fullName>braseg_nm_estipulante__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome do Estipulante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>