force-app/main/default/objects/InsurancePolicy/fields/braseg_nm_produto__c.field-meta.xml
<CustomField>
    <fullName>braseg_nm_produto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nome do Produto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>