force-app/main/default/objects/InsurancePolicy/fields/braseg_nm_status__c.field-meta.xml
<CustomField>
    <fullName>braseg_nm_status__c</fullName>
    <formula>IF(
				IsActive, 
				&apos;Ativa&apos;,
				&apos;Inativa&apos;
                )</formula>
    <label>Situação da Apólice</label>
    <type>Text</type>
</CustomField>