force-app/main/default/objects/InsurancePolicy/fields/braseg_nova_celula__c.field-meta.xml
<CustomField>
    <fullName>braseg_nova_celula__c</fullName>
    <description>Nova Célula</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Nova Célula</inlineHelpText>
    <label>Nova Célula</label>
    <length>20</length>
    <type>Text</type>
</CustomField>