force-app/main/default/objects/InsurancePolicy/fields/braseg_nr_certificado__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_certificado__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número do Certificado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>