force-app/main/default/objects/InsurancePolicy/fields/braseg_nr_cnpj_empresa__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_cnpj_empresa__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CNPJ da Empresa</label>
    <length>20</length>
    <type>Text</type>
</CustomField>