force-app/main/default/objects/InsurancePolicy/fields/braseg_nr_cnpj_estipulante__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_cnpj_estipulante__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CNPJ do Estipulante</label>
    <length>20</length>
    <type>Text</type>
</CustomField>