force-app/main/default/objects/InsurancePolicy/fields/braseg_nr_mercadoalvo__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_mercadoalvo__c</fullName>
    <description>Numero Mercado Alvo</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Numero Mercado Alvo</inlineHelpText>
    <label>Numero Mercado Alvo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>