force-app/main/default/objects/InsurancePolicy/fields/braseg_nr_proposta__c.field-meta.xml
<CustomField>
    <fullName>braseg_nr_proposta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nº da Proposta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>