force-app/main/default/objects/InsurancePolicy/fields/braseg_nro_titulo__c.field-meta.xml
<CustomField>
    <fullName>braseg_nro_titulo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número do Título</label>
    <length>100</length>
    <type>Text</type>
</CustomField>