force-app/main/default/objects/InsurancePolicy/fields/braseg_num_conta_debito__c.field-meta.xml
<CustomField>
    <fullName>braseg_num_conta_debito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Numero de Conta de Débito</label>
    <length>20</length>
    <type>Text</type>
</CustomField>