force-app/main/default/objects/InsurancePolicy/fields/braseg_qt_dependentes__c.field-meta.xml
<CustomField>
    <fullName>braseg_qt_dependentes__c</fullName>
    <label>Quantidade de Dependente</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>