force-app/main/default/objects/InsurancePolicy/fields/braseg_qt_vidas__c.field-meta.xml
<CustomField>
    <fullName>braseg_qt_vidas__c</fullName>
    <label>Quantidade de Vidas</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>