force-app/main/default/objects/InsurancePolicy/fields/braseg_regime_contratacao__c.field-meta.xml
<CustomField>
    <fullName>braseg_regime_contratacao__c</fullName>
    <label>Regime de Contratação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FROTA</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>INDIVIDUAL C/ CONTR.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>