force-app/main/default/objects/InsurancePolicy/fields/braseg_segmento_mercadoalvo__c.field-meta.xml
<CustomField>
    <fullName>braseg_segmento_mercadoalvo__c</fullName>
    <description>Segmento Mercado Alvo</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Segmento Mercado Alvo</inlineHelpText>
    <label>Segmento Mercado Alvo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>