force-app/main/default/objects/InsurancePolicy/fields/braseg_st_indica_renovacao__c.field-meta.xml
<CustomField>
    <fullName>braseg_st_indica_renovacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indica Renovação</label>
    <type>Checkbox</type>
</CustomField>