force-app/main/default/objects/InsurancePolicy/fields/braseg_status_centro__c.field-meta.xml
<CustomField>
    <fullName>braseg_status_centro__c</fullName>
    <description>Status do Centro Economico</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status do Centro Economico</inlineHelpText>
    <label>Status do Centro Economico</label>
    <length>40</length>
    <type>Text</type>
</CustomField>