force-app/main/default/objects/InsurancePolicy/fields/braseg_subf__c.field-meta.xml
<CustomField>
    <fullName>braseg_subf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subfatura</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Apólices de seguro (Subfatura)</relationshipLabel>
    <relationshipName>Ap_lices_de_seguro</relationshipName>
    <type>Lookup</type>
</CustomField>