force-app/main/default/objects/InsurancePolicy/fields/braseg_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>braseg_Sucursal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>Sucursal__c</referenceTo>
    <relationshipLabel>Apólices de seguro</relationshipLabel>
    <relationshipName>Apolices_de_seguro</relationshipName>
    <type>Lookup</type>
</CustomField>