force-app/main/default/objects/InsurancePolicy/fields/braseg_superintendente_grupo__c.field-meta.xml
<CustomField>
    <fullName>braseg_superintendente_grupo__c</fullName>
    <description>Superintendente</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Superintendente</inlineHelpText>
    <label>Superintendente</label>
    <length>40</length>
    <type>Text</type>
</CustomField>