force-app/main/default/objects/InsurancePolicy/fields/braseg_tipo_produto__c.field-meta.xml
<CustomField>
    <fullName>braseg_tipo_produto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>