force-app/main/default/objects/InsurancePolicy/fields/braseg_tp_doc_emissao__c.field-meta.xml
<CustomField>
    <fullName>braseg_tp_doc_emissao__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Documento de Emissão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>