force-app/main/default/objects/InsurancePolicy/fields/braseg_tp_lanc_premio__c.field-meta.xml
<CustomField>
    <fullName>braseg_tp_lanc_premio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Lançamento do Premio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>