force-app/main/default/objects/InsurancePolicy/fields/braseg_tp_parcela__c.field-meta.xml
<CustomField>
    <fullName>braseg_tp_parcela__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Parcela/Pagamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>