force-app/main/default/objects/InsurancePolicy/fields/braseg_tp_pessoa_corretor__c.field-meta.xml
<CustomField>
    <fullName>braseg_tp_pessoa_corretor__c</fullName>
    <label>Tipo Pessoa Corretor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>