force-app/main/default/objects/InsurancePolicy/fields/braseg_vl_ultima_parcela__c.field-meta.xml
<CustomField>
    <fullName>braseg_vl_ultima_parcela__c</fullName>
    <label>Valor da Última Parcela</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>