force-app/main/default/objects/InsurancePolicy/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Identificador Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>