force-app/main/default/objects/InsurancePolicy/fields/Nome_empresa__c.field-meta.xml
<CustomField>
    <fullName>Nome_empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies (Matricula Empresa)</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>