force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_AUTO_OV.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_AUTO_OV</fullName>
    <active>true</active>
    <label>Auto</label>
</RecordType>