force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_CAPITALIZACAO_OV.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_CAPITALIZACAO_OV</fullName>
    <active>true</active>
    <label>Capitalização</label>
</RecordType>