force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_PREVIDENCIA_ARCOR.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_PREVIDENCIA_ARCOR</fullName>
    <active>true</active>
    <label>Previdência Arcor</label>
</RecordType>