force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_PREVIDENCIA_OV.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_PREVIDENCIA_OV</fullName>
    <active>true</active>
    <label>Previdência</label>
</RecordType>