force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_RE_OV.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_RE_OV</fullName>
    <active>true</active>
    <label>Re</label>
</RecordType>