force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_RESIDENCIAL_OV.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_RESIDENCIAL_OV</fullName>
    <active>true</active>
    <label>Residencial</label>
</RecordType>