force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_SAUDE_DENTAL_OV.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_SAUDE_DENTAL_OV</fullName>
    <active>true</active>
    <label>Saúde e Dental</label>
</RecordType>