force-app/main/default/objects/InsurancePolicy/recordTypes/BRASEG_VIDA_OV.recordType-meta.xml
<RecordType>
    <fullName>BRASEG_VIDA_OV</fullName>
    <active>true</active>
    <label>Vida</label>
</RecordType>