force-app/main/default/objects/InsurancePolicy/listViews/All_InsurancePolicies.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicies</fullName>
    <columns>RecordType</columns>
    <columns>Name</columns>
    <columns>braseg_matr_holding__c</columns>
    <columns>NameInsured</columns>
    <columns>braseg_matr_empresa__c</columns>
    <columns>Nome_empresa__c</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as Apólices de Seguros</label>
</ListView>